--- a/test262bn.conf
+++ b/test262bn.conf
@@ -61,12 +61,12 @@ Atomics
 BigInt
 caller
 class
-class-fields-private=skip
-class-fields-public=skip
-class-methods-private=skip
-class-static-fields-public=skip
-class-static-fields-private=skip
-class-static-methods-private=skip
+class-fields-private
+class-fields-public
+class-methods-private
+class-static-fields-public
+class-static-fields-private
+class-static-methods-private
 computed-property-names
 const
 cross-realm=skip
@@ -93,7 +93,7 @@ generators
 globalThis=skip
 hashbang
 host-gc-required=skip
-import.meta=skip
+import.meta
 Int32Array
 Int8Array
 IsHTMLDDA=skip
@@ -107,10 +107,11 @@ object-spread
 Object.fromEntries
 Object.is
 optional-catch-binding
+optional-chaining=skip
 Promise.allSettled
 Promise.prototype.finally
 Proxy
-proxy-missing-checks=skip
+proxy-missing-checks
 Reflect
 Reflect.construct
 Reflect.set
@@ -147,6 +148,7 @@ Symbol.toStringTag
 Symbol.unscopables
 tail-call-optimization=skip
 template
+top-level-await=skip
 TypedArray
 u180e
 Uint16Array
@@ -169,9 +171,6 @@ test262/test/built-ins/ThrowTypeError/unique-per-realm-function-proto.js
 
 # no debugger keyword support
 test262/test/language/statements/debugger/statement.js
-
-# bogus html close comment test with syntax error
-test262/test/annexB/built-ins/Function/createdynfn-html-close-comment-params.js
 
 # bogus tests
 test262/test/language/expressions/dynamic-import/for-await-resolution-and-error-agen.js
